fix image z-index (#368)
(cherry picked from commit c67746acf6ca1e64bdafc3c288c51ca924a68f65)

--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -109,7 +109,7 @@
   z-index: 10000;
 }
 
-.medium-zoom-image {
+.medium-zoom-image--opened {
   z-index: 10001;
 }
 
